印刷用ページの生成

--- a/card/style.css
+++ b/card/style.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px 0px;
   grid-template-areas:
     ". . . . ."
     ". . . . ."
@@ -12,8 +11,13 @@
   gap: 1px 1px;
   font-size: 30px;
   width: fit-content;
+  justify-items: center;
+  align-items: center;
+  border: solid 1px;
 }
 
 #cardView>div {
-  width: min-content;
+  width: -webkit-fill-available;
+  text-align: center;
+  border: solid 1px;
 }
