--- a/printCards/style.css
+++ b/printCards/style.css
@@ -6,8 +6,8 @@
 #showCards>section {
   font-size:30px;
   display: grid; 
-  grid-template-columns: 45px 45px 45px 45px 45px; 
-  grid-template-rows: 45px 45px 45px 45px 45px 45px; 
+  grid-template-columns: 100px 100px 100px 100px 100px; 
+  grid-template-rows: 1fr 100px 100px 100px 100px 100px; 
   gap: 1px 1px; 
   grid-template-areas: 
     "card-title card-title card-title card-title card-title"
@@ -19,11 +19,15 @@
   justify-items: center;
   align-items: center;
   border: solid 1px;
-    break-after: page;
+  break-after: page;
 }
 .card-title { grid-area: card-title; }
 #showCards>section>div {
+  display: grid;
   width: -webkit-fill-available;
+  height: -webkit-fill-available;
   text-align: center;
   border: solid 1px;
+  padding: auto;
+      align-items: center;
 }
