--- a/machine/style.css
+++ b/machine/style.css
@@ -13,3 +13,14 @@
   width: 80px;
   text-align: center;
 }
+img#headerImg {
+    max-width: 100vw;
+    /* min-width: 50vw; */
+    max-height: 25vh;
+}
+
+header {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+}
