何故か現在の設定が反映されないバグを修正

--- a/printCards/style.css
+++ b/printCards/style.css
@@ -50,4 +50,5 @@
   background-image: url(../img/headerLogo.png);
   background-repeat: no-repeat;
   background-size: contain;
+  min-height: 100px;
 }
