ロゴの位置を変更できるようになった。

--- a/settings/style.css
+++ b/settings/style.css
@@ -34,3 +34,10 @@ header h1 {
   margin: 0;
   padding: 16px;
 }
+input[type="file"] {
+  display: none;
+}
+input[type="text"],
+input [type="number"] {
+  width: 30px;
+}
