--- a/printCards/style.css
+++ b/printCards/style.css
@@ -1,3 +1,6 @@
+:root {
+  --header-icon-position: left;
+}
 @media print {
   header,
   footer {
@@ -29,6 +32,7 @@
   grid-area: card-title;
   margin: 0;
   text-align: center;
+  background-position: var(--header-icon-position);
 }
 .card-header :is(h1, p) {
   margin: 0;
